fixed margin bottom on mobile

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 80px;
+  margin: 80px 0;
 }
 
 
